--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">student<span>Mai Nishino</span></h1>
-                <img src="./images/img_profile3.gif" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./images/img_profile3.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>町田市在住のWebデザインを勉強中の、西野舞です。今までWebデザインとは無縁の生活を送っていましたが、Webページ制作について触れることで、興味を持ちました。多くを学んで吸収し、早く会社に貢献できる人材になりたいです。</p>
             </div>
          </header>
